[UPD] Fixed icons alignment, fixed development visibility

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -440,6 +440,7 @@ blockquote {
 img {
 	max-width: 100%;
 	height: auto;
+	vertical-align: middle;
 }
 
 .editor-link {
