--- a/_sass/_statuses.scss
+++ b/_sass/_statuses.scss
@@ -1,7 +1,4 @@
 .tested, .not-tested {
   text-decoration: none;
-
-  img {
-    vertical-align: middle;
-  }
+  vertical-align: middle;
 }
